--- a/module1/slides/1_EDA/1_EDA.html
+++ b/module1/slides/1_EDA/1_EDA.html
@@ -114,6 +114,7 @@ https://celehs.github.io/PheCAP/
 ```r
 library(PheCAP)
 library(tidyverse)
+library(glmpath)
 
 # Load data.
 data(ehr_data)
@@ -373,41 +374,41 @@ class: inverse, middle, center
 
 # Prepare data for feature selection
 
-### Data spliting 
-
-- Split the data into train and test set. 
-- Fit the model on training set. 
-- Validate the model on test set. 
-
---
+### Prepare surrogates
 
 
 ```r
-train_data &lt;- ehr_data %&gt;% filter(patient_id %in% data$training_set)
-train_x &lt;- train_data %&gt;% select(starts_with("COD") | starts_with("NLP"))
-train_y &lt;- train_data %&gt;% select(label) %&gt;% pull()
+sicd &lt;- log(ehr_data$main_ICD + 1)
+snlp &lt;- log(ehr_data$main_NLP + 1)
 ```
 
+### Prepare features to be selected
+
 
 ```r
-test_data &lt;- ehr_data %&gt;% filter(patient_id %in% data$validation_set) 
-test_y &lt;- test_data %&gt;% select(label) %&gt;% pull()
+x &lt;- data.matrix(ehr_data %&gt;% select(starts_with("COD") | starts_with("NLP")))
 ```
 
---
-
-### Data transformation
-
-- As the features are count data, eg. number of billing codes, it is better to perform transformation to make the distribution **less skewed**. 
+### Transform the features
 
 
 ```r
-train_x &lt;- log(train_x + 1)
+x &lt;- log(x + 1)
+```
+
+### Load functions
+
+
+```r
+source("../../script/rankCor.R")
+source("../../script/extremeMethod.R")
+source("../../script/clusteringMethod.R")
+source("../../script/modelFitting.R")
 ```
 
 ---
 
-# 1. Rank correlation 
+# 1. Rank correlation (AFEP)
 
 #### Motivation: 
 
@@ -420,27 +421,20 @@ train_x &lt;- log(train_x + 1)
 - Select feature `\(\mathbf{X}_j\)` if the absolute rank correlation between `\((S, \mathbf{X}_j)\)` &gt; threshold, `\(j = 1, \dots, p\)` 
 - where `\(S\)` is `\(S_{NLP}\)` and `\(\mathbf{X}_j\)` is the count of medical term `\(j\)` mentioned.
 
---
 
 #### Implementation:
 
+Default threshold = 0.15
+
 
 ```r
-rankCor &lt;- function (s, x, threshold = 0.15) {
-  
-  # s: N x 1 surrogates
-  # x: N x p features
-  # threshold: an constant for significant correlation 
-  
-  rank_cor &lt;- abs(cor(s, x,  method = "pearson"))
-  ind &lt;- which(rank_cor &gt; threshold)
-  return(ind)
-}
+# AFEP_select &lt;- rankCor(snlp, x, threshold = 0.15)
+# colnames(x)[AFEP_select]
 ```
 
 ---
 
-# 2. Tail method
+# 2. Tail method (SAFE)
 
 #### Motivation (Extreme assumption): 
 
@@ -462,43 +456,87 @@ ehr_data %&gt;%
 ]
 
 .pull-right[
-![](1_EDA_files/figure-html/unnamed-chunk-11-1.png)&lt;!-- --&gt;
+![](1_EDA_files/figure-html/unnamed-chunk-12-1.png)&lt;!-- --&gt;
 ]
+
+---
+
+# 2. Tail method (SAFE, cont'd)
 
 #### Method: 
 
 - Convert discrete `\(S\)` into binary `\(S_*\)`, eg. if `\(S \leq 1\)`, `\(S_* = 0\)`, if `\(S \geq 10\)`, `\(S_* = 1\)`
 - Fit LASSO `\(S_* \sim \mathbf{X}\)`
 
----
-# 2. Tail method (cont'd)
-
 #### Implementation:
 
-Directly use functions from the PheCAP package. 
+- Consider 3 different surrogates, and create binary `\(S_*\)` based on 2.5 and 97.5 quantile of the surrogate. 
+- Repeated samples from the two extremes 400 times.
+- Fit adaptive LASSO `\(S \sim \mathbf{X}, S \in \{ S_{ICD}, S_{NLP}, S_{ICDNLP}\}\)`
+- Choose those appear more than 50% times (Majority voting). 
 
 
 ```r
-# surrogates &lt;- list(
-#   PhecapSurrogate(
-#     variable_names = "main_ICD",
-#     lower_cutoff = 1, upper_cutoff = 10),
-#   PhecapSurrogate(
-#     variable_names = "main_NLP",
-#     lower_cutoff = 1, upper_cutoff = 10),
-#   PhecapSurrogate(
-#     variable_names = c("main_ICD", "main_NLP"),
-#     lower_cutoff = 1, upper_cutoff = 10))
-# 
-# feature_selected &lt;- phecap_run_feature_extraction(data, surrogates)
-# feature_selected
+# SAFE_icd &lt;- extreme_method(sicd, x)
+# SAFE_nlp &lt;- extreme_method(snlp, x)
+# SAFE_both &lt;- extreme_method(cbind(sicd, snlp), x)
+# beta &lt;- rbind(SAFE_icd$beta_all, SAFE_nlp$beta_all, SAFE_both$beta_all)
+# safe_select &lt;- which(colMeans(beta, na.rm = T) &gt;= 0.5)
+# colnames(x)[safe_select]
 ```
 
 ---
 
-# Clustering method
+# 3. Clustering method
+
+#### Motivation:
+
+- Focus on non-binary and/or multiple surrogates. 
+
+#### Method:
+
+- Estimate `\(\pi_S = P(Y=1|S_{ICD}, S_{NLP})\)` using Gaussian mixture models
+- Fit adaptive LASSO `\(\hat{\pi}_S \sim \mathbf{X}\)`.
+
+#### Implementation:
+
+
+```r
+# system.time(Auto &lt;- clustering_method(cbind(sicd, snlp), x))
+# Auto_select &lt;- Auto$beta_select
+# colnames(x)[Auto_select]
+```
 
 ---
+class: inverse, middle, center
+
+# Review exercises and discussion
+
+---
+
+.left-column[
+## Let's code
+[15:00 mins](https://flipclock.us/#/c/0h15m0s)
+]
+
+.right-column[
+### Exercise 1
+
+- Run the R script `ex1.R` containing all the methods introduced above. 
+- Examine how many features each method select. 
+
+### Exercise 2
+
+- Change the parameter values for each method
+- for correlation method, try different threshold values
+- for tail method, try different upper/lower bound values for surrogates, or try different proportion for majority voting.
+
+### Exercise 3
+
+- (Advanced) Identify what features are selected by all of the three methods. 
+- Hint: 'UpSetR::upset()'. 
+]
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
