--- a/module1/1_EDA.html
+++ b/module1/1_EDA.html
@@ -20,7 +20,7 @@ class: title-slide, left, bottom
 
 # Electronic Health Record Phenotyping
 ----
-## ** Module 1: Exploratory data analysis and feature selection**
+## ** Module 1: Data processing and feature selection**
 ### Siyue Yang and Jesse Gronsbell
 ### University of Toronto
 ### SSC Workshop, June 5 2022
@@ -400,10 +400,10 @@ x &lt;- log(x + 1)
 
 
 ```r
-source("../../script/rankCor.R")
-source("../../script/extremeMethod.R")
-source("../../script/clusteringMethod.R")
-source("../../script/modelFitting.R")
+source("../Rscripts/rankCor.R")
+source("../Rscripts/extremeMethod.R")
+source("../Rscripts/clusteringMethod.R")
+source("../Rscripts/modelFitting.R")
 ```
 
 ---
@@ -528,8 +528,8 @@ class: inverse, middle, center
 ### Exercise 2
 
 - Change the parameter values for each method
-- for correlation method, try different threshold values
-- for tail method, try different upper/lower bound values for surrogates, or try different proportion for majority voting.
+- For correlation method, try different threshold values
+- For tail method, try different upper/lower bound values for surrogates, or try different proportion for majority voting.
 
 ### Exercise 3
 
