Update the index website to show the exercise link

--- a/index.html
+++ b/index.html
@@ -2458,17 +2458,9 @@ Slides
 <p>This website contains materials for Biostatistics Workshop in <a href="https://ssc.ca/en/meetings/annual/2022-annual-meeting">2022 SSC Annual Meeting Online</a>.</p>
 <p>In this workshop, we will introduce statistical learning methods designed to expedite the phenotyping process in order to improve the scalability of EHR research.</p>
 <ul>
-<li><strong>Module 1</strong> Exploratory Data Analysis (EDA) and Feature Selection (<a href="https://jlgrons.github.io/EHR-Phenotyping-Workshop/module1/1_EDA.html">Slides</a>)</li>
+<li><p><strong>Module 1</strong> Exploratory Data Analysis (EDA) and Feature Selection (<a href="https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/module1/ex1.Rmd">Exerciese 1</a>)</p></li>
+<li><p><strong>Module 2</strong> Model Fitting and Evaluation (<a href="https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/module2/ex2.Rmd">Exerciese 2</a>)</p></li>
 </ul>
-<aside>
-<a href="https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/Exercises/ex1.R">Exerciese 1</a>
-</aside>
-<ul>
-<li><strong>Module 2</strong> Model Fitting and Evaluation (<a href="https://jlgrons.github.io/EHR-Phenotyping-Workshop/module2/2_Model.html">Slides</a>)</li>
-</ul>
-<aside>
-<a href="https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/Exercises/ex2.R">Exerciese 2</a>
-</aside>
 <h3 id="phecap">PheCAP</h3>
 <p>We will use the real EHR data examples from <a href="https://celehs.github.io/PheCAP/">PheCAP</a>, an R package that implements high-throughput phenotyping with electronic health record (EHR) using a common automated pipeline..</p>
 <h3 id="required-packages">Required packages</h3>
