Update index page and change svm pacakge

--- a/index.html
+++ b/index.html
@@ -2479,7 +2479,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
     <span class='st'>"pROC"</span>,
     <span class='st'>"parallel"</span>,
     <span class='st'>"randomForestSRC"</span>,
-    <span class='st'>"e1071"</span>
+    <span class='st'>"SVMMaj"</span>
 <span class='op'>)</span>
 
 <span class='co'># Load the packages.</span>
