--- a/index.html
+++ b/index.html
@@ -2448,15 +2448,15 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <div class="d-article">
 <h1 id="welcome">Welcome</h1>
 <p>This website contains materials for Biostatistics Workshop in <a href="https://ssc.ca/en/meetings/annual/2022-annual-meeting">2022 SSC Annual Meeting Online</a>.</p>
-<p>In this workshop, we will introduce statistical learning methods designed to expedite the phenotyping process in order to improve the scalability of EHR research.</p>
+<p>In this workshop, we will introduce statistical learning methods designed to expedite the phenotyping process to improve the scalability of EHR research.</p>
 <ul>
-<li><p><strong>Module 1</strong> Exploratory data analysis (EDA) (<a href="https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/module1/module1_phecap.pdf">Exerciese 1</a>)</p></li>
-<li><p><strong>Module 2</strong> Supervised learning model fitting and evaluation (<a href="https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/module2/module2_phecap.pdf">Exerciese 2</a>)</p></li>
-<li><p><strong>Module 3</strong> Semi-supervised learning model fitting and evaluation (<a href="https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/module3/module3_phecap.pdf">Exerciese 3</a>)</p></li>
-<li><p><strong>Module 4</strong> Semi-supervised and weakly-supervised learning model fitting and evaluation (<a href="https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/module4/module4_phecap.pdf">Exerciese 4</a>)</p></li>
+<li><p><strong>Module 1</strong> Introduction [<a href="https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/module1/module1_slides.pdf">Slides</a>] [<a href="https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/module1/module1_slides.Rmd">Rmd</a>]</p></li>
+<li><p><strong>Module 2</strong> Supervised learning [<a href="https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/module2/module2_slides.pdf">Slides</a>] [<a href="https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/module2/module2_slides.Rmd">Rmd</a>]</p></li>
+<li><p><strong>Module 3</strong> Semi-supervised learning (PheCAP) [<a href="https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/module3/module3_slides.pdf">Slides</a>] [<a href="https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/module3/module3_slides.Rmd">Rmd</a>]</p></li>
+<li><p><strong>Module 4</strong> Alternative approaches [<a href="https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/module4/module4_slides.pdf">Slides</a>] [<a href="https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/module4/module4_slides.Rmd">Rmd</a>]</p></li>
 </ul>
 <h3 id="phecap">PheCAP</h3>
-<p>We will use the real EHR data examples from <a href="https://celehs.github.io/PheCAP/">PheCAP</a>, an R package that implements high-throughput phenotyping with electronic health record (EHR) using a common automated pipeline.</p>
+<p>We will use the real EHR data examples from <a href="https://celehs.github.io/PheCAP/">PheCAP</a>, an R package that implements high-throughput phenotyping with electronic health records (EHRs) using a common automated pipeline.</p>
 <h3 id="required-packages">Required packages</h3>
 <p>Here is a list of packages that will be used during the workshop.</p>
 <p>Please copy and paste the following code into R Console to check and load the packages.</p>
@@ -2469,11 +2469,8 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
     <span class='st'>"PheNorm"</span>,  
     <span class='st'>"MAP"</span>, 
     <span class='st'>"glmnet"</span>,     
-    <span class='st'>"glmpath"</span>,  
-    <span class='st'>"mclust"</span>,
     <span class='st'>"tidyverse"</span>,  
     <span class='st'>"ggplot2"</span>,  
-    <span class='st'>"corrplot"</span>,
     <span class='st'>"data.table"</span>, 
     <span class='st'>"mltools"</span>,  
     <span class='st'>"pROC"</span>,
