--- a/index.html
+++ b/index.html
@@ -2450,7 +2450,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <p>This website contains materials for Biostatistics Workshop at the <a href="https://ssc.ca/en/meetings/annual/2022-annual-meeting">2022 SSC Annual Meeting Online</a>.</p>
 <p>In this workshop, we introduce methods for phenotyping with electronic health record (EHR) data. Slides and code can be found for an example phenotyping problem below.</p>
 <ul>
-<li><p>Electronic health records phenotyping [<a href="">Slides</a>]</p></li>
+<li><p>Electronic health records phenotyping [<a href="https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/slides/SSC_Workshop.pdf">Slides</a>]</p></li>
 <li><p><strong>Module 1</strong> Introduction [<a href="https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/module1/module1_slides.pdf">Slides</a>] [<a href="https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/module1/module1_slides.Rmd">Rmd</a>]</p></li>
 <li><p><strong>Module 2</strong> Supervised learning [<a href="https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/module2/module2_slides.pdf">Slides</a>] [<a href="https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/module2/module2_slides.Rmd">Rmd</a>]</p></li>
 <li><p><strong>Module 3</strong> Semi-supervised learning (PheCAP) [<a href="https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/module3/module3_slides.pdf">Slides</a>] [<a href="https://github.com/jlgrons/EHR-Phenotyping-Workshop/blob/main/module3/module3_slides.Rmd">Rmd</a>]</p></li>
